--- a/sstv_decoder.html
+++ b/sstv_decoder.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-PT">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>SSTV Decoder - Multi Modo</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     :root {
       --bg: #000;
@@ -15,7 +15,7 @@
       margin: 0;
       background: var(--bg);
       color: var(--text);
-      font-family: 'Arial', sans-serif;
+      font-family: Arial, sans-serif;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -56,14 +56,18 @@
       display: flex;
       flex-direction: column;
       gap: 10px;
+      align-items: center;
     }
-    input, button {
+    input,
+    button {
       padding: 10px;
       border-radius: 10px;
       border: none;
       font-size: 1rem;
       background: var(--card);
       color: var(--text);
+      width: 220px;
+      max-width: 90vw;
     }
     button:hover {
       background: var(--accent);
@@ -73,30 +77,45 @@
 </head>
 <body>
   <h1>SSTV Decoder</h1>
+
   <div class="mode-selector" id="modeSelector"></div>
+
   <div class="controls">
-    <input type="file" accept=".wav" id="audioFile">
+    <input type="file" accept=".wav" id="audioFile" />
     <button onclick="startMicrophone()">Usar Microfone</button>
+    <button onclick="exportImage()">Guardar Imagem como PNG</button>
   </div>
+
   <canvas id="sstvCanvas" width="320" height="256"></canvas>
 
-  <script src="https://cdn.jsdelivr.net/gh/flatmax/jsSDR/js/sstv.min.js"></script>
-  <script>
-    const canvas = document.getElementById('sstvCanvas');
-    const ctx = canvas.getContext('2d');
-    const modeSelector = document.getElementById('modeSelector');
-    const availableModes = ['MartinM1', 'Robot36', 'Scottie1', 'Scottie2', 'MartinM2'];
-    let selectedMode = 'MartinM1';
+  <!-- Biblioteca SSTV local, tens de ter o sstv.min.js na mesma pasta -->
+  <script src="sstv.min.js"></script>
 
-    availableModes.forEach(mode => {
-      const btn = document.createElement('button');
+  <script>
+    const canvas = document.getElementById("sstvCanvas");
+    const ctx = canvas.getContext("2d");
+    const modeSelector = document.getElementById("modeSelector");
+    const availableModes = [
+      "MartinM1",
+      "Robot36",
+      "Scottie1",
+      "Scottie2",
+      "MartinM2",
+    ];
+    let selectedMode = "MartinM1";
+
+    // Criar botões para modos
+    availableModes.forEach((mode) => {
+      const btn = document.createElement("button");
       btn.textContent = mode;
-      btn.className = 'mode-btn';
-      if (mode === selectedMode) btn.classList.add('active');
+      btn.className = "mode-btn";
+      if (mode === selectedMode) btn.classList.add("active");
       btn.onclick = () => {
         selectedMode = mode;
-        document.querySelectorAll('.mode-btn').forEach(b => b.classList.remove('active'));
-        btn.classList.add('active');
+        document.querySelectorAll(".mode-btn").forEach((b) =>
+          b.classList.remove("active")
+        );
+        btn.classList.add("active");
       };
       modeSelector.appendChild(btn);
     });
@@ -115,47 +134,60 @@
             imageData.data[idx + 3] = 255;
           }
           ctx.putImageData(imageData, 0, lineNum);
-        }
+        },
       });
       decoder.decode(audioData);
     }
 
-    document.getElementById('audioFile').addEventListener('change', function(e) {
+    // Carregar ficheiro wav
+    document.getElementById("audioFile").addEventListener("change", function (e) {
       const file = e.target.files[0];
       const reader = new FileReader();
-      reader.onload = function(ev) {
+      reader.onload = function (ev) {
         const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
-        audioCtx.decodeAudioData(ev.target.result, function(buffer) {
+        audioCtx.decodeAudioData(ev.target.result, function (buffer) {
           decodeAudio(buffer.getChannelData(0));
         });
       };
       reader.readAsArrayBuffer(file);
     });
 
+    // Microfone
     function startMicrophone() {
-      navigator.mediaDevices.getUserMedia({ audio: true }).then(function(stream) {
-        const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
-        const mic = audioCtx.createMediaStreamSource(stream);
-        const processor = audioCtx.createScriptProcessor(4096, 1, 1);
-        const samples = [];
+      navigator.mediaDevices
+        .getUserMedia({ audio: true })
+        .then(function (stream) {
+          const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+          const mic = audioCtx.createMediaStreamSource(stream);
+          const processor = audioCtx.createScriptProcessor(4096, 1, 1);
+          const samples = [];
 
-        processor.onaudioprocess = function(e) {
-          const input = e.inputBuffer.getChannelData(0);
-          for (let i = 0; i < input.length; i++) {
-            samples.push(input[i]);
-          }
-          if (samples.length > 44100 * 12) {
-            mic.disconnect();
-            processor.disconnect();
-            decodeAudio(samples);
-          }
-        };
+          processor.onaudioprocess = function (e) {
+            const input = e.inputBuffer.getChannelData(0);
+            for (let i = 0; i < input.length; i++) {
+              samples.push(input[i]);
+            }
+            if (samples.length > 44100 * 12) {
+              mic.disconnect();
+              processor.disconnect();
+              decodeAudio(samples);
+            }
+          };
 
-        mic.connect(processor);
-        processor.connect(audioCtx.destination);
-      }).catch(function(err) {
-        alert("Erro ao aceder ao microfone: " + err);
-      });
+          mic.connect(processor);
+          processor.connect(audioCtx.destination);
+        })
+        .catch(function (err) {
+          alert("Erro ao aceder ao microfone: " + err);
+        });
+    }
+
+    // Exportar imagem como PNG
+    function exportImage() {
+      const link = document.createElement("a");
+      link.download = "sstv_image.png";
+      link.href = canvas.toDataURL("image/png");
+      link.click();
     }
   </script>
 </body>
